# Circular-Pong

./: CMakeLists.txt  README.md  application.cpp  application.hpp
devlog/: devlog.md
engine_library_dir/: CMakeLists.txt  camera.cpp  camera.hpp  debug.cpp  debug.hpp  gameObjectBase.cpp  gameObjectBase.hpp  geometry.cpp  geometry.hpp  input.cpp  input.hpp  ode.cpp  ode.hpp  shaderManager.cpp  shaderManager.hpp  ssao.cpp  ssao.hpp  texture.cpp  texture.hpp  textureManager.cpp  textureManager.hpp  transform.cpp  transform.hpp  uniforms.cpp  uniforms.hpp
game_data_files/: environmentProperties.cpp  environmentProperties.hpp  geometries.cpp  geometries.hpp  geometryGenerator.cpp  geometryGenerator.hpp  materials.cpp  materials.hpp
game_files/: cameraManager.cpp  cameraManager.hpp  gameManager.cpp  gameManager.hpp  gameObjectManager.cpp  gameObjectManager.hpp  renderManager.cpp  renderManager.hpp
game_objects/: ball.cpp  ball.hpp  brick.cpp  brick.hpp  brickBase.cpp  brickBase.hpp  brickController.cpp  brickController.hpp  ground.cpp  ground.hpp  paddle.cpp  paddle.hpp  paddleController.cpp  paddleController.hpp  screenOrientedQuad.cpp  screenOrientedQuad.hpp
game_ui/: fullscreenText.cpp  fullscreenText.hpp  fullscreenTexts.hpp
math_library_dir/: CMakeLists.txt  axisAngle.cpp  axisAngle.hpp  cartesian.cpp  cartesian.hpp  mat4.cpp  mat4.hpp  polar.cpp  polar.hpp  quaternion.cpp  quaternion.hpp  (+2 more)
ui_library_dir/: CMakeLists.txt  digit.cpp  digit.hpp  element.cpp  element.hpp  number.cpp  number.hpp  rectangle.cpp  rectangle.hpp  transform.cpp  transform.hpp
(+18 files in other folders)
